# regex-project

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  coverage.xml  pyproject.toml  regex_program.py  setup.py
.github/workflows/: codecov.yml  github_CI.yml
dokumentaatio/: käyttöohje.md  maarittelydokumentti.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti-pohja.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: __init__.py  program.py
src/services/: __init__.py
src/services/input_string/: __init__.py  user_input.py
src/services/non_finite_automaton/: __init__.py  exceptions.py  nfa.py
src/services/postfix/: __init__.py  exceptions.py  postfix.py  shunting_yard.py
src/services/regex_search/: __init__.py  regex_tokenizer.py
src/services/regex_syntax_checker/: exceptions.py  regex_tokenizer.py
src/services/shunting_yard/: __init__.py  exceptions.py  state_machine.py
src/tests/: __init__.py  test_placeholder.py  test_state_machine.py
src/tests/non_finite_automaton/: test_nfa.py
src/tests/postfix/: test_shunting_yard.py
src/tests/regex_search/: __init__.py
tests/non_finite_automaton/: test_nfa.py
tests/postfix/: test_shunting_yard.py
tests/regex_search/regex_tokenizer/: test_capture_groups.py  test_curly_brackets.py  test_escape_sequences.py  test_special.py  test_square_brackets.py
tests/regex_syntax_checker/: __init__.py
tests/regex_syntax_checker/regex_tokenizer/: test_special.py  (+2 more)
(+12 files in other folders)
