[tool.poetry]
name = "regex-project"
version = "0.1.0"
description = ""
authors = ["kimtakala <kim.takala@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pylint = "^3.3.5"
pytest-cov = "^6.0.0"
coverage = "^7.7.1"
black = "^25.1.0"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term --cov-report=xml"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
